Inicio de proyecto GifApps

--- a/2.Angular/01-bases/src/app/dbz/main-page/main-page.component.html
+++ b/2.Angular/01-bases/src/app/dbz/main-page/main-page.component.html
@@ -3,6 +3,6 @@
 
 <div class="row">
   <!--Paso de parametro a componente hijo-->
-  <app-personajes [personajes]="personajes"></app-personajes>
-  <app-agregar [nuevo]="nuevo" (onNuevoPersonaje)="agregarNuevoPersonaje($event)"></app-agregar>
+  <app-personajes></app-personajes>
+  <app-agregar [nuevo]="nuevo"></app-agregar>
 </div>
