Avance gifs service

--- a/3.GifsApp/src/app/shared/sidebar/sidebar.component.html
+++ b/3.GifsApp/src/app/shared/sidebar/sidebar.component.html
@@ -5,7 +5,10 @@
       <a href="#" class="list-group-item list-group-item-action">
         Dashboard
       </a>
-      <a *ngFor="let item of historial" href="#" class="list-group-item list-group-item-action">
+      <a *ngFor="let item of historial" 
+      href="#" 
+      class="list-group-item list-group-item-action"
+      (click)="buscar(item)">
        {{item | titlecase}}
       </a>
     </div>
