--- a/3.GifsApp/src/app/gifs/resultados/resultados.component.html
+++ b/3.GifsApp/src/app/gifs/resultados/resultados.component.html
@@ -1,5 +1,5 @@
 <div class="row">
-    <div *ngFor="let item of resultados" class="col-m-4 col-sm-6">
+    <div *ngFor="let item of resultados" class="col-m-4 col-sm-6 animate__animated animate__fadeIn">
         <div class="card">
             <img [src]="item.images.downsized_medium.url" alt="item.title" class="card-img-top">
             <div class="card-body">
