Avances proyecto paises

--- a/4.paisesApp/src/app/app.component.html
+++ b/4.paisesApp/src/app/app.component.html
@@ -1,2 +1,8 @@
-<app-sidebar></app-sidebar>
-<app-por-capital></app-por-capital>
+<div class="row container mt-4">
+    <div class="col-3">
+        <app-sidebar></app-sidebar>
+    </div>
+    <div class="col">
+        <router-outlet></router-outlet>
+    </div>
+</div>
