--- a/4.paisesApp/src/app/shared/sidebar/sidebar.component.html
+++ b/4.paisesApp/src/app/shared/sidebar/sidebar.component.html
@@ -1,1 +1,10 @@
-<p>sidebar works!</p>
+<h2>Busquedas</h2>
+<hr>
+<ul class="list-group">
+    <li class="list-group-item" routerLink="pais" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">
+        Buscar x País</li>
+    <li class="list-group-item" routerLink="region" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">
+        Buscar x Region</li>
+    <li class="list-group-item" routerLink="capital" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">
+        Buscar x Capital</li>
+</ul>
