--- a/4.paisesApp/src/app/pais/pages/por-pais/por-pais.component.html
+++ b/4.paisesApp/src/app/pais/pages/por-pais/por-pais.component.html
@@ -3,9 +3,11 @@
 
 <div class="row">
     <div class="col">
-        <form (ngSubmit)="buscar()" autocomplete="off">
-            <input type="text" name="termino" class="form-control" placeholder="Buscar país..." [(ngModel)]="termino" />
-        </form>
+        <app-pais-input 
+          (onEnter)="buscar($event)"
+          (onDebounce)="sugerir($event)"
+          >
+        </app-pais-input>
     </div>
 </div>
 
@@ -16,27 +18,6 @@
 
 <div *ngIf="!hayError" class="row">
     <div class="col">
-        <table class="table table-hover">
-            <thead>
-                <tr>
-                    <th>#</th>
-                    <th>Bandera</th>
-                    <th>Nombre</th>
-                    <th>Población</th>
-                    <th>Acción</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr *ngFor="let pais of paises;let i=index">
-                    <td>{{i+1}}</td>
-                    <td><img [src]="pais.flags.png" alt="" class="small-flag" width="30px" height="20px"/></td>
-                    <td>{{pais.name}}</td>
-                    <td>{{pais.population | number}}</td>
-                    <td>
-                        <a [routerLink]="['/pais', pais.alpha2Code]">Ver...</a>
-                    </td>
-                </tr>
-            </tbody>
-        </table>
+        <app-pais-tabla [paises]="paises"></app-pais-tabla>
     </div>
 </div>
