--- a/4.paisesApp/src/app/pais/components/pais-input/pais-input.component.html
+++ b/4.paisesApp/src/app/pais/components/pais-input/pais-input.component.html
@@ -2,7 +2,7 @@
     <input type="text" 
      name="termino" 
      class="form-control" 
-     placeholder="Buscar..." 
+     placeholder={{placeHolder}} 
      [(ngModel)]="termino"
      (input)="teclaPresionada()"/>
 </form>
