--- a/4.paisesApp/src/app/pais/pages/por-pais/por-pais.component.html
+++ b/4.paisesApp/src/app/pais/pages/por-pais/por-pais.component.html
@@ -4,6 +4,7 @@
 <div class="row">
     <div class="col">
         <app-pais-input 
+          [placeHolder]="placeHolder"
           (onEnter)="buscar($event)"
           (onDebounce)="sugerir($event)"
           >
