--- a/4.paisesApp/src/app/pais/pages/por-capital/por-capital.component.html
+++ b/4.paisesApp/src/app/pais/pages/por-capital/por-capital.component.html
@@ -1,2 +1,22 @@
 <h2>Por Capital</h2>
 <hr>
+
+<div class="row">
+    <div class="col">
+        <app-pais-input 
+          [placeHolder]="placeHolder"
+          (onEnter)="buscar($event)">
+        </app-pais-input>
+    </div>
+</div>
+
+<hr>
+<div *ngIf="hayError" class="alert alert-danger">
+    {{mensajeError}}
+</div>
+
+<div *ngIf="!hayError" class="row">
+    <div class="col">
+        <app-pais-tabla [paises]="paises"></app-pais-tabla>
+    </div>
+</div>
