--- a/4.paisesApp/src/app/pais/pages/ver-pais/ver-pais.component.html
+++ b/4.paisesApp/src/app/pais/pages/ver-pais/ver-pais.component.html
@@ -1,2 +1,54 @@
 <h2>Ver País</h2>
 <hr>
+
+<div *ngIf="!pais; else divPais" class="alert alert-info">
+  Espere por favor...
+</div>
+
+<ng-template #divPais>
+  <div class="row">
+    <div class="col-12">
+      <h1>Pais: <small>{{pais.name}}</small></h1>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-4">
+      <h3>Bandera</h3>
+      <img [src]="pais.flag" class="img-thumbnail" alt="">
+    </div>
+
+    <div class="col">
+      <h3>Información</h3>
+      <ul class="list-group">
+        <li class="list-group-item">
+          <strong>Población:</strong> {{pais.population | number}}
+        </li>
+        <li class="list-group-item">
+          <strong>Código Númerico:</strong> {{pais.numericCode}}
+        </li>
+        <li class="list-group-item">
+          <strong>Código Alpha:</strong> {{pais.alpha3Code}}
+        </li>
+      </ul>
+    </div>
+  </div>
+
+  <h3>Traducciones</h3>
+  <div class="row">
+    <div class="col">
+      <span class="badege bg-primary mr-1">{{pais.translations.de}}</span>
+      <span class="badege bg-primary mr-1">{{pais.translations.br}}</span>
+      <span class="badege bg-primary mr-1">{{pais.translations.es}}</span>
+      <span class="badege bg-primary mr-1">{{pais.translations.fa}}</span>
+      <span class="badege bg-primary mr-1">{{pais.translations.hr}}</span>
+      <span class="badege bg-primary mr-1">{{pais.translations.ja}}</span>
+      <span class="badege bg-primary mr-1">{{pais.translations.it}}</span>
+    </div>
+  </div>
+
+  <!--<pre class="mt-5">
+    {{pais | json}}
+  </pre>>-->
+
+</ng-template>
