--- a/4.paisesApp/src/app/pais/pages/ver-pais/ver-pais.component.html
+++ b/4.paisesApp/src/app/pais/pages/ver-pais/ver-pais.component.html
@@ -35,7 +35,7 @@
   </div>
 
   <h3>Traducciones</h3>
-  <div class="row">
+  <div *ngFor="let item of list" ngIf="" class="row">
     <div class="col">
       <span class="badege bg-primary mr-1">{{pais.translations.de}}</span>
       <span class="badege bg-primary mr-1">{{pais.translations.br}}</span>
