--- a/4.paisesApp/src/app/pais/pages/ver-pais/ver-pais.component.html
+++ b/4.paisesApp/src/app/pais/pages/ver-pais/ver-pais.component.html
@@ -35,7 +35,7 @@
   </div>
 
   <h3>Traducciones</h3>
-  <div *ngFor="let item of list" ngIf="" class="row">
+  <div class="row">
     <div class="col">
       <span class="badege bg-primary mr-1">{{pais.translations.de}}</span>
       <span class="badege bg-primary mr-1">{{pais.translations.br}}</span>
@@ -46,9 +46,5 @@
       <span class="badege bg-primary mr-1">{{pais.translations.it}}</span>
     </div>
   </div>
-
-  <!--<pre class="mt-5">
-    {{pais | json}}
-  </pre>>-->
 
 </ng-template>
