--- a/4.paisesApp/src/app/pais/pages/por-capital/por-capital.component.html
+++ b/4.paisesApp/src/app/pais/pages/por-capital/por-capital.component.html
@@ -1,12 +1,11 @@
-<h2>Por Capital</h2>
-<hr>
-
-<div class="row">
-    <div class="col">
-        <app-pais-input 
-          [placeHolder]="placeHolder"
-          (onEnter)="buscar($event)">
-        </app-pais-input>
+<div class="animate__animated animate__bounce">
+    <h2>Por Capital</h2>
+    <hr>
+    <div class="row">
+        <div class="col">
+            <app-pais-input [placeHolder]="placeHolder" (onEnter)="buscar($event)">
+            </app-pais-input>
+        </div>
     </div>
 </div>
 
