--- a/5.pipesApp/src/app/app.component.html
+++ b/5.pipesApp/src/app/app.component.html
@@ -1,4 +1,7 @@
-<div class="text-layout">
+<app-menu></app-menu>
+<router-outlet></router-outlet>
+
+<!--<div class="text-layout">
     <h1>{{ nombre | uppercase}}</h1>
     <h1>{{ valor | number}}</h1>
     <h1>{{ obj | json}}</h1>
@@ -13,4 +16,4 @@
 
 <p-card header="Simple Card" subheader="Esto es un subheader" class="card">
 Lorem ipsum dolor sit amet consectetur, adipisicing elit. Est, fugiat? Dolorum quibusdam dignissimos corrupti fugiat quod ullam ut dicta, nulla consequuntur exercitationem amet commodi itaque quis similique porro explicabo deserunt.
-</p-card>
+</p-card>-->
