--- a/5.pipesApp/src/app/ventas/pages/basicos/basicos.component.html
+++ b/5.pipesApp/src/app/ventas/pages/basicos/basicos.component.html
@@ -1,1 +1,61 @@
-<p>Basicos Works!</p>
+<div class="text-layout">
+    <h1>Pipes Básicos</h1>
+    <p>
+        Pipes incluidos en Angular
+    </p>
+</div>
+
+
+<div class="p-grid">
+    <div class="p-col-4">
+        <p-card header="uppercase" [subheader]="nombreLower|uppercase">
+            {{nombreLower | uppercase}}
+        </p-card>
+    </div>
+    <div class="p-col-4">
+        <p-card header="lowercase" [subheader]="nombreLower|lowercase">
+            {{nombreLower | lowercase}}
+        </p-card>
+    </div>
+    <div class="p-col-4">
+        <p-card header="titlecase" [subheader]="nombreLower|titlecase">
+            {{nombreLower | titlecase}}
+        </p-card>
+    </div>
+</div>
+
+<div class="text-layout">
+    <h1>Date | Fecha | Pipe</h1>
+    <p>Pipes para mostrar las fechas</p>
+</div>
+
+<div class="p-grid">
+    <div class="p-col-6">
+        <p-card>
+            <ul>
+                <li>fecha</li>
+                <li>fecha | Short</li>
+                <li>fecha | Medium</li>
+                <li>fecha | Month</li>
+                <li>fecha | Time</li>
+            </ul>
+        </p-card>
+    </div>
+    <div class="p-col-6">
+        <p-card>
+            <ul>
+                <li>{{fecha}}</li>
+                <li>{{fecha | date:'short'}}</li>
+                <li>{{fecha | date:'medium'}}</li>
+                <li>{{fecha | date:'MM'}}</li>
+                <li>{{fecha | date:'fullTime'}}</li>
+            </ul>
+            <hr>
+            <ul>
+                <li>{{fecha | date:'long':'GMT-5'}}</li>
+                <li>{{fecha | date:'long':'GMT-4'}}</li>
+                <li>{{fecha | date:'long':'GMT-5'}}</li>
+            </ul>
+        </p-card>
+    </div>
+</div>
